图片上传防止oom
图片上传防止oom

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,13 @@
             android:text="登录"
             />
 
+        <Button
+            android:id="@+id/bt_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="上传头像"
+            />
+
 
     </LinearLayout>
 </RelativeLayout>
